// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/stories/TextFilter with filterText 1`] = `
<div
  class="css-79elbk"
>
  <input
    class="css-1n8j8p8"
    name="filter-text"
    placeholder="Filter"
    type="text"
    value="Filter Text"
  />
  <button
    class="clear css-thhrwj"
  >
    ×
  </button>
</div>
`;

exports[`Storyshots ui/stories/TextFilter without filterText 1`] = `
<div
  class="css-79elbk"
>
  <input
    class="css-1n8j8p8"
    name="filter-text"
    placeholder="Filter"
    type="text"
    value=""
  />
</div>
`;
